2010-07-14 16:30  rsbivand

	* R/SpatialLines-methods.R, man/Line.Rd, man/nowrapSpatialLines.Rd,
	  man/recenter-methods.Rd: coerce ID to character in Lines

2010-07-12 21:59  rsbivand

	* ChangeLog, inst/ChangeLog: tidy

2010-07-07 23:41  edzer

	* DESCRIPTION: increased version number.

2010-07-07 23:40  edzer

	* NAMESPACE: added length() S3 methods

2010-07-07 23:39  edzer

	* R/: SpatialGrid-methods.R, SpatialLinesDataFrame-methods.R,
	  SpatialPoints-methods.R, SpatialPointsDataFrame-methods.R,
	  SpatialPolygons-methods.R: added length() methods for Spatial
	  objects; small improvements to the asWKT printing.

2010-07-07 16:02  mdsumner

	* R/SpatialLines-methods.R: more consistent handling of lwd and lty
	  arguments passed to lines() by plotSpatialLines - multiple values
	  for each are now recycled as necessary

	  also added arguments lend, ljoin and lmitre for lines()

2010-07-06 18:06  edzer

	* R/SpatialLines-methods.R: changed the col recycling in
	  plot.SpatialLines; suggestion by Michael Sumner on
	  r-spatial-devel mailing list

2010-06-23 14:24  rsbivand

	* ChangeLog, inst/ChangeLog, DESCRIPTION: tidy

2010-06-23 13:45  edzer

	* R/spplot.R: solved the spplot factor key issue mentioned in
	  https://stat.ethz.ch/pipermail/r-sig-geo/2010-June/008586.html

2010-06-22 08:52  edzer

	* R/spplot.R: spplot(meuse, scales = list(x = list(draw = TRUE)))
	  now works.

2010-06-21 09:32  rsbivand

	* DESCRIPTION, R/image.R: checks in image2Grid

2010-06-12 06:19  rsbivand

	* R/spplot.R: warning in spplot for points

2010-06-07 13:06  edzer

	* R/SpatialGrid-methods.R: removed the setAs("SpatialGrid",
	  "SpatialPoints", ...) coercion, as it breaks csdacm.R of the
	  ASDAR book.

2010-06-05 18:11  rsbivand

	* man/SpatialGrid-class.Rd: r1/2 to x/y in SL bbox

2010-06-05 18:04  rsbivand

	* R/Class-SpatialLines.R, R/SpatialLines-methods.R,
	  R/SpatialPolygons-methods.R, tests/pass1.Rout.save: r1/2 to x/y
	  in SL bbox

2010-05-27 15:23  edzer
